Fix : on force la surcharge de taille (titres collapser)

--- a/framework/scss/_config/_contextual-variables-parents.scss
+++ b/framework/scss/_config/_contextual-variables-parents.scss
@@ -138,7 +138,7 @@ $ds44-font-sizes: (
   font-weight: 700;
 }
 .ds44-collapser_button{
-  font-size: 1.5625em;
+  font-size: 1.5625em!important;
 }
 
 @media (min-width: 64em) {
